fixed)
11. Track1 screen has a background, a track, and a player car
(not properly positioned yet)

Version 0.2i - 0.3i
---------------------------
1. Player car proplerly positioned
2. Car movement with rotation and camera follow completed
3. Added Car class (objectified the cars, including playerCar)
4. Added Waypoint class that has a target Car associated with it

Version 0.4a
---------------------------
= ALPHA STAGE =

1. Cars are 'attached' to a waypoint
2. Waypoint system is very buggy
3. Previous system is scrapped, simpler system implemented
4. Waypoint system mostly completed, except a rotation bug
5. Plasma cannons added to front of player car img
6. Plasma bullets (mostly) align to the cannon no matter the playerCar's
rotation, but when turning sharply and at higher speeds the bullets offset
by a certain distance eventually, for some reason
7. Previous bug fixed (as far as I know)
8. Track collision FINALLY implemented via collision color map
9. Car-to-car collision implemented

Version 0.5a
----------------------------
1. Main menu music and track1 music added
2. Added Polygons to PlasmaBullets
3. Very basic PlasmaBullet collision detection with car polygons completed
4. AICars are "destroyed" when their HP is 0 due to PlasmaBullets
5. AICars now have an explosion animation when they are destroyed
6. PlasmaBullets are deleted once they reach a certain distance
7. AICar can now place mines down based on a predictable timer (I'm lazy)

Version 0.6a
----------------------------
1. PlayerCar can now get blown up by the LandMines (but the PlayerCar's "ashes"
can still move around, which will be fixed).

Version 0.7a
----------------------------
1. PlayerCar's ashes cannot move (which is when the PlayerCar is destroyed).
2. Various bugs and problems fixed.
3. PlayerCar can now shoot and destroy the LandMines.

Version 0.8a
----------------------------
= BETA STAGE =

1. Other various bugs and problems fixed, especially animation bugs.